2004-04-17  Dominique Devriese  <devriese@kde.org>

	* Fix the calculation of the rectangle containing the entire
	document ( which is used for centering on the document ), to take
	into account non-point objects.  This is accomplished by adding a
	surroundingRect function to ObjectImp, and by implementing it
	properly for all objects that can have such a thing.

2004-04-15  Pino Toscano <toscano.pino@tiscali.it>

	* More work in Dr. Geo filter: add a new object and simplifying a
	bit his internal structure.

	* Kig now ask the user what to do when he/she tries to save to
	a file in another format than Kig's own.

	* Improve Python scripting's API: add vectors, angles and arcs.

	* Add i18n for TestConstructor's.

	* Improved NewScriptAction class to support, without other
	changes, other scripting languages.

	* Some little here-and-there improvements

2004-04-11  Dominique Devriese  <devriese@kde.org>

	* Improve Kig embedded in Konqueror experience: make translations
	and icons work by using the correct instanceName(), and using the
	iconLoader we get from our KInstance instead of from KGlobal ( so
	that the kig specific dirs are checked for icons as well ).

2004-04-10  Dominique Devriese  <devriese@kde.org>

	* Enable the DrGeo input filter.

2004-04-10  Pino Toscano <toscano.pino@tiscali.it>

	* Improved angle size editing, making possible choosing between
	degrees, radians and gradians.

	* More work in Dr. Geo filter.

	* Some improvements in Goniometry class

2004-04-08  Pino Toscano <toscano.pino@tiscali.it>

	* More work on types dialog: a new dialog will allow to edit
	types that now work in read-only mode.

	* Add a 'cross' style for points.

	* Some very minor work in Dr. Geo filter.

	* Add a new simple class to easily work with goniometric
	measures, and adapt Kig to use this class.

	* Some #include fixes

2004-04-05  Pino Toscano <toscano.pino@tiscali.it>

	* A new look for type list in the type dialog: a listview instead