@@ -1,3 +1,11 @@
+2004-04-19  Pino Toscano <toscano.pino@tiscali.it>
+
+	* More work in Dr. Geo filter.
+
+	* A new cool (I hope :) ) icon for Python Script.
+
+	* Some various improvements.
+
 2004-04-17  Dominique Devriese  <devriese@kde.org>
 
 	* Fix the calculation of the rectangle containing the entire
